--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #.gitignore
 
+# Ignore extensions
 *.diff
 *.orig
 *.err
@@ -11,6 +12,7 @@
 *.vi
 *~
 
+# System stuff
 *.esproj
 *.sass-cache
 *.sublime-project
